# cpp_super_pirate_world

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci-cd.yaml
resources/data/levels/: 0.json  1.json  2.json  4.json  5.json  6.json  omni.json
resources/data/overworld/: overworld.json
resources/data/tilesets/: editor_paths.json  enemies.json  extra.json  grass.json  inside.json  items.json  map objects.json  objects.json  omni.json  outside.json  overworld.json  platforms.json
src/: BaseSprites.h  Debug.h  GameAssets.h  GameData.h  Interfaces.h  Level.h  LevelMap.h  Main.cpp  Player.cpp  Player.h  Settings.cpp  Settings.h  Sprites.h
src/Core/: Animate.h  CustomExceptions.h  DrawUtils.cpp  DrawUtils.h  EventQueue.cpp  EventQueue.h  Events.h  FloatRect.h  GameObject.cpp  GameObject.h  GameObjectManager.cpp  GameObjectManager.h  Group.cpp  Group.h  Layer.h  LayerStack.h  ParrllaxBackground.h  RandomUtils.cpp  RandomUtils.h  RectUtils.cpp  RectUtils.h  ResourceManager.h  Resources.cpp  Resources.h  SpriteComparisonUtils.cpp  SpriteComparisonUtils.h  StringUtils.cpp  StringUtils.h  TiledMap.h  Timer.cpp  Timer.h  Transformable.h
